@@ -1,4 +1,8 @@
 
+ 747.	[bug]		The code to determine whether an IXFR was possible
+			did not properly check for a database that could
+			not have a journal. [RT #908]
+
  746.	[bug]		The sdb didn't clone rdatasets properly, causing
 			a crash when the server followed delegations. [RT #905]
 
